k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: email-writer-sb-service
spec:
  selector:
    app: email-writer-sb
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
